--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -117,10 +117,13 @@ dev_dependencies:
     sdk: flutter
   flutter_driver:
     sdk: flutter
-  test: null
-
+  integration_test:
+    sdk: flutter
   flutter_lints: ^5.0.0
   build_runner: ^2.4.15
+  bloc_test: ^10.0.0      
+  mocktail: ^1.0.4        
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
